2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Travis Griggs:
	bug #38307: Can't write usersig of an xmega256a3
	* stk500v2.c (stk600_xprog_page_erase): allow erasing the usersig space.

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Robert Niemi:
	bug #35800: Compilation error on certain systems if parport is disabled
	* linux_ppdev.h: Conditionalize inclusion of <linux/parport.h> and
	<linux/ppdev.h> on HAVE_PARPORT

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39794: warnings when building avrdude 6.0rc1 under CentOS 6.4
	* pickit.c (usb_open_device): Use %p rather than %X to print "handle"
	which is a pointer
	* jtag3.c (jtag3_initialize): Initialize "flashsize" to be sure it
	proceeds with a valid value.

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39794: warnings when building avrdude 6.0rc1 under CentOS 6.4
	* buspirate.c: Turn the "cmd" argument of the various methods into
	a "const unsigned char *"; while doing this, declare all arrays being
	passed as arguments to be pointers rather than arrays, as the latter
	obfuscates the way arrays are being passed to a callee in C.
	* avrftdi.c: (Dito.)
	* pickit2.c: (Dito.)
	* ft245r.c: (Dito.)
	* avr910.c: (Dito.)
	* stk500.c: (Dito.)
	* bitbang.c: (Dito.)
	* bitbang.h: (Dito.)
	* avrftdi_tpi.c: (Dito.)
	* avrftdi_tpi.h: (Dito.)
	* usbasp.c: (Dito.)
	* stk500v2.c: (Dito.)
	* pgm.h: (Dito.)
	* usbtiny.c: (Dito.)

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #38023: avrdude doesn't return an error code when attempting
	to upload an invalid Intel HEX file
	* fileio.c (ihex2b): Turn the "No end of file record found" warning
	into an error if no valid record was found at all.

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Claus-Justus Heine:
	bug #38713: Compilation of the documentation breaks with texinfo-5
	* doc/avrdude.texi: Turn @itemx into @item, add @headitem to STK600
	Routing/Socket card table
